After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 791813 - adaptivedemux: fix pending_segment log
adaptivedemux: fix pending_segment log
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal minor
: 1.12.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-12-20 06:35 UTC by Jun Xie
Modified: 2018-01-17 14:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix pending_segment log (1.27 KB, patch)
2017-12-20 06:38 UTC, Jun Xie
committed Details | Review

Description Jun Xie 2017-12-20 06:35:01 UTC
>adaptivedemux gstadaptivedemux.c:1513:gst_adaptive_demux_update_streams_segment:<dashdemux0:video_00>[00m Pending segment now UNDEFINED segment


pengding_segment shall be logged as GST_PTR_FORMAT
Comment 1 Jun Xie 2017-12-20 06:38:37 UTC
Created attachment 365778 [details] [review]
fix pending_segment log
Comment 2 Sebastian Dröge (slomo) 2017-12-20 12:21:24 UTC
commit 26cd1f108e2a1e250f38d6d900f321b545d598fd (HEAD -> master)
Author: Jun Xie <jun.xie@samsung.com>
Date:   Wed Dec 20 15:01:16 2017 +0800

    adaptivedemux: fix pending_segment log
    
    pending_segment shall be logged as GST_PTR_FORMAT, it's an event
    
    https://bugzilla.gnome.org/show_bug.cgi?id=791813